--- a/style.css
+++ b/style.css
@@ -5,4 +5,39 @@ html, body {
 
 canvas {
   display: block;
+  margin: 0;
+  padding: 0;
+}
+
+
+.textstyle {
+    float: left;
+    clear: none;
+
+    left: 30px;
+    top: 30px;
+    margin: 0;
+    padding: 0;
+
+    color: black;
+
+    font-size: 25px;
+    font-family: "Noticia Text";
+}
+
+.pstyle {
+    margin-left: 80px;
+    top: 30px;
+    margin: 0;
+    padding: 0;
+
+    color: black;
+
+    font-size: 20px;
+    font-family: "Noticia Text", "bold";
+}
+
+.buttonstyle {
+      font-family: "Noticia Text";
+      margin: 8px;
 }
